syntax = "proto2";

package nio.proto;

import "perception_object.proto";
import "prediction.proto";

// estimated obstacle intent
message ObstacleIntent {
  enum Type {
    UNKNOWN = 0;
    STOP = 1;
    STATIONARY = 2;
    MOVING = 3;
    CHANGE_LANE = 4;
    LOW_ACCELERATION = 5;
    HIGH_ACCELERATION = 6;
    LOW_DECELERATION = 7;
    HIGH_DECELERATION = 8;
  }
  optional Type type = 1 [default = UNKNOWN];
}

// self driving car intent
message Intent {
  enum Type {
    UNKNOWN = 0;
    STOP = 1;
    CRUISE = 2;
    CHANGE_LANE = 3;
  }
  optional Type type = 1 [default = UNKNOWN];
}

message PredictionObstacle {
  optional PerceptionObject perception_obstacle = 1;
  optional double timestamp = 2;  // GPS time in seconds
  // the length of the time for this prediction (e.g. 10s)
  optional double predicted_period = 3;
  // can have multiple trajectories per obstacle
  repeated Prediction trajectory = 4;

  // estimated obstacle intent
  optional ObstacleIntent intent = 5;

  optional ObstaclePriority priority = 6;

  optional bool is_static = 7 [default = false];

  // Feature history latest -> earliest sequence
//   repeated Feature feature = 8;
}

message PredictionObstacles {
  // make prediction for multiple obstacles
  repeated PredictionObstacle prediction_obstacle = 1;

  // start timestamp
  optional double start_timestamp = 2;

  // end timestamp
  optional double end_timestamp = 3;

  // self driving car intent
  optional Intent intent = 4;

  // Scenario
//   optional Scenario scenario = 7;
}
